--- a/index.html
+++ b/index.html
@@ -21,37 +21,59 @@
             -webkit-tap-highlight-color: transparent;
         }
         #game {
+            display: block;
             text-align: center;
             background: rgba(120, 120, 120, 0.9);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-            width: 100%;
-            max-width: 400px;
+        }
+        h2 {
+            margin-bottom: 20px;
+        }
+        .button {
+            background-color: #ff9800;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-weight: bold;
+            margin: 10px;
+            width: 80%;
+            max-width: 300px;
+            position: relative;
+            transition: background-color 0.3s, transform 0.1s;
+        }
+        .button:active {
+            background-color: #e68a00;
+            transform: scale(0.95);
         }
         #burger {
             width: 50vw;
             height: 50vw;
-            max-width: 300px;
+            max-width: 400px;
+            max-height: 400px;
             background-image: url('whoppe.png');
             background-size: cover;
+            margin: 30px;
             cursor: pointer;
             border-radius: 50%;
-            margin: 20px auto;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
             position: relative;
         }
         #stats {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-around;
             width: 100%;
-            max-width: 400px;
-            margin: 10px 0;
+            max-width: 600px;
+            margin-top: 20px;
             color: #333;
             font-weight: bold;
         }
         #energy-bar-container {
             width: 100%;
-            max-width: 400px;
+            max-width: 600px;
             margin-top: 20px;
             text-align: center;
             position: relative;
@@ -104,51 +126,6 @@
             font-size: 12px;
             transform: translate(-50%, -50%);
             pointer-events: none;
-            z-index: 1000;
-        }
-        .tab-container {
-            display: flex;
-            justify-content: space-around;
-            width: 100%;
-            max-width: 400px;
-            margin-top: 20px;
-        }
-        .tab-icon {
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-            font-size: 24px;
-            padding: 10px;
-        }
-        .upgrade-section {
-            display: none;
-            text-align: center;
-        }
-        .upgrade-section.active {
-            display: block;
-        }
-        .upgrade-button {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 10px;
-            margin: 10px 0;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            width: 100%;
-            max-width: 350px;
-            font-size: 16px;
-        }
-        .upgrade-button:hover {
-            background-color: #45a049;
-        }
-        .upgrade-button span.icon {
-            font-size: 24px;
-            margin-right: 10px;
         }
     </style>
 </head>
@@ -159,7 +136,7 @@
             <div id="level">Уровень: 1</div>
         </div>
 
-        <div id="burger" onclick="tapBurger()"></div>
+        <div id="burger"></div>
 
         <div id="energy-bar-container">
             <div id="energy-bar">
@@ -169,24 +146,7 @@
             </div>
         </div>
 
-        <div id="main-screen" class="upgrade-section active">
-            <h2>Главный экран</h2>
-        </div>
-
-        <div id="upgrade-screen" class="upgrade-section">
-            <h2>Прокачка</h2>
-            <button class="upgrade-button" id="upgrade-energy">
-                <span class="icon">⚡</span> Увеличить макс. энергию (Стоимость: <span id="energy-cost">50</span>)
-            </button>
-            <button class="upgrade-button" id="upgrade-clicks">
-                <span class="icon">🖱️</span> Увеличить клики за тап (Стоимость: <span id="click-cost">50</span>)
-            </button>
-        </div>
-
-        <div class="tab-container">
-            <button class="tab-icon" id="home-tab">🏠</button>
-            <button class="tab-icon" id="upgrade-tab">🚀</button>
-        </div>
+        <button class="button" id="upgrade">Улучшить (Стоимость: 50)</button>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
@@ -217,120 +177,125 @@
         let energy = 3000;
         let maxEnergy = 3000;
         let pointsPerClick = 1;
-        let upgradeEnergyCost = 50;
-        let upgradeClicksCost = 50;
-        let lastEnergyUpdate = Date.now(); // Для хранения времени последнего обновления энергии
+        let upgradeCost = 50;
+        let tapsForNextLevel = 10;
+        let lastEnergyUpdate = null;
 
+        const burger = document.getElementById('burger');
         const score = document.getElementById('score');
         const levelDisplay = document.getElementById('level');
         const energyBar = document.getElementById('energy');
         const energyText = document.getElementById('energy-text');
         const maxEnergyText = document.getElementById('max-energy-text');
-        const upgradeEnergyButton = document.getElementById('upgrade-energy');
-        const upgradeClicksButton = document.getElementById('upgrade-clicks');
-        const homeTab = document.getElementById('home-tab');
-        const upgradeTab = document.getElementById('upgrade-tab');
-        const mainScreen = document.getElementById('main-screen');
-        const upgradeScreen = document.getElementById('upgrade-screen');
+        const upgradeButton = document.getElementById('upgrade');
 
         const updateStats = () => {
             score.innerText = `Клики: ${taps}`;
             levelDisplay.innerText = `Уровень: ${level}`;
             energyBar.style.width = `${(energy / maxEnergy) * 100}%`;
-            energyText.innerText = `Энергия: ${Math.floor(energy)}`;
+            energyText.innerText = `Энергия: ${energy}`;
             maxEnergyText.innerText = `Макс: ${maxEnergy}`;
+            upgradeButton.innerText = `Улучшить (Стоимость: ${upgradeCost})`;
+            upgradeButton.disabled = taps < upgradeCost;
+
+            // Сохранение данных в Firestore
+            saveToFirestore();
+        };
+
+        const levelUp = () => {
+            if (taps >= level * tapsForNextLevel) {
+                level += 1;
+                tapsForNextLevel *= 1.5;
+                updateStats();
+            }
+        };
+
+        const saveToFirestore = async () => {
+            if (!userId) return;
+            try {
+                await setDoc(doc(db, 'users', userId.toString()), {
+                    taps: taps,
+                    level: level,
+                    energy: energy,
+                    maxEnergy: maxEnergy,
+                    pointsPerClick: pointsPerClick,
+                    upgradeCost: upgradeCost,
+                    tapsForNextLevel: tapsForNextLevel,
+                    lastEnergyUpdate: new Date().toISOString()
+                }, { merge: true });
+                console.log('Data saved to Firestore');
+            } catch (error) {
+                console.error('Error saving data:', error);
+            }
+        };
+
+        const loadFromFirestore = async () => {
+            if (!userId) return;
+            try {
+                const docRef = doc(db, 'users', userId.toString());
+                const docSnap = await getDoc(docRef);
+                if (docSnap.exists()) {
+                    const data = docSnap.data();
+                    taps = data.taps || 0;
+                    level = data.level || 1;
+                    energy = data.energy || 3000;
+                    maxEnergy = data.maxEnergy || 3000;
+                    pointsPerClick = data.pointsPerClick || 1;
+                    upgradeCost = data.upgradeCost || 50;
+                    tapsForNextLevel = data.tapsForNextLevel || 10;
+                    lastEnergyUpdate = data.lastEnergyUpdate || new Date().toISOString();
+                    restoreEnergy();
+                    updateStats();
+                } else {
+                    console.log('Document does not exist');
+                }
+            } catch (error) {
+                console.error('Error loading data:', error);
+            }
         };
 
         const restoreEnergy = () => {
-            const currentTime = Date.now();
-            const timeDiff = Math.floor((currentTime - lastEnergyUpdate) / 1000); // Время в секундах
-            const energyGain = Math.min(maxEnergy - energy, pointsPerClick * timeDiff); // Восстанавливаем энергию
-            energy += energyGain;
-            lastEnergyUpdate = currentTime; // Обновляем время последнего обновления
-
-            if (energy > maxEnergy) {
-                energy = maxEnergy; // Не превышаем максимальную энергию
-            }
-
-            updateStats(); // Обновляем статистику в интерфейсе
-            saveToFirestore(); // Сохраняем данные в Firestore
-        };
-
-        const tapBurger = () => {
-            if (energy > 0) {
-                const energyCost = pointsPerClick; // Расход энергии равен количеству полученных кликов
-                if (energy >= energyCost) {
-                    taps += pointsPerClick;
-                    energy -= energyCost; // Уменьшаем энергию
-                    updateStats(); // Обновляем интерфейс
+            const now = new Date();
+            if (lastEnergyUpdate) {
+                const timeDiff = now - new Date(lastEnergyUpdate);
+                const energyRestoration = Math.floor(timeDiff / (1000 * 60)); // энергия восстанавливается каждую минуту
+                if (energy < maxEnergy) {
+                    energy += energyRestoration;
+                    if (energy > maxEnergy) {
+                        energy = maxEnergy;
+                    }
                 }
+                lastEnergyUpdate = now.toISOString();
             }
         };
 
-        // Переключение вкладок
-        homeTab.addEventListener('click', () => {
-            mainScreen.classList.add('active');
-            upgradeScreen.classList.remove('active');
-        });
-
-        upgradeTab.addEventListener('click', () => {
-            upgradeScreen.classList.add('active');
-            mainScreen.classList.remove('active');
-        });
-
-        // Обработчики для улучшений
-        upgradeEnergyButton.addEventListener('click', () => {
-            if (taps >= upgradeEnergyCost) {
-                taps -= upgradeEnergyCost;
-                maxEnergy += 100;
-                upgradeEnergyCost += 20; // Увеличиваем стоимость
+        burger.addEventListener('click', () => {
+            if (energy > 0) {
+                taps += pointsPerClick;
+                energy -= 1;
+                levelUp();
                 updateStats();
+                showHitMarker();
             }
         });
 
-        upgradeClicksButton.addEventListener('click', () => {
-            if (taps >= upgradeClicksCost) {
-                taps -= upgradeClicksCost;
+        upgradeButton.addEventListener('click', () => {
+            if (taps >= upgradeCost) {
+                taps -= upgradeCost;
                 pointsPerClick += 1;
-                upgradeClicksCost += 20; // Увеличиваем стоимость
+                upgradeCost = Math.floor(upgradeCost * 1.5);
                 updateStats();
             }
         });
 
-        // Функция сохранения в Firestore
-        const saveToFirestore = async () => {
-            try {
-                await setDoc(doc(db, "users", userId), {
-                    taps,
-                    level,
-                    energy,
-                    maxEnergy,
-                    pointsPerClick,
-                    upgradeEnergyCost,
-                    upgradeClicksCost,
-                    lastEnergyUpdate
-                });
-            } catch (error) {
-                console.error("Ошибка сохранения данных:", error);
-            }
-        };
-
-        // Восстановление данных из Firestore
-        const loadFromFirestore = async () => {
-            const userDoc = await getDoc(doc(db, "users", userId));
-            if (userDoc.exists()) {
-                const data = userDoc.data();
-                taps = data.taps;
-                level = data.level;
-                energy = data.energy;
-                maxEnergy = data.maxEnergy;
-                pointsPerClick = data.pointsPerClick;
-                upgradeEnergyCost = data.upgradeEnergyCost;
-                upgradeClicksCost = data.upgradeClicksCost;
-                lastEnergyUpdate = data.lastEnergyUpdate;
-                restoreEnergy(); // Восстановление энергии на основе времени
-                updateStats();
-            }
+        const showHitMarker = () => {
+            const hitMarker = document.createElement('div');
+            hitMarker.className = 'hitmarker';
+            hitMarker.innerText = `+${pointsPerClick}`;
+            hitMarker.style.left = `${Math.random() * 100}%`;
+            hitMarker.style.top = `${Math.random() * 100}%`;
+            document.body.appendChild(hitMarker);
+            setTimeout(() => hitMarker.remove(), 1000);
         };
 
         loadFromFirestore();
